K8s-Deploymennt/03.Servicemesh-deployment/03.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: first-app
  namespace: production
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: first-app
