K8s-Deploymennt/03.Servicemesh-deployment/06.gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: api
  namespace: production
spec:
  selector:
    istio: gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - istio.ergonnex.net
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - istio.ergonnex.net
      tls:
        credentialName: istio-ergonnex-net
        mode: SIMPLE
