K8s-Deploymennt/03.Servicemesh-deployment/05.virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: first-app
  namespace: production
spec:
  hosts:
    - istio.ergonnex.net
    - first-app
  gateways:
    - api
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: first-app
            subset: v1
          weight: 10
        - destination:
            host: first-app
            subset: v2
          weight: 90
